# benchwrap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  benchview.py  benchwrap.py  prefetch.py  pyproject.toml  run_suite.py  start.py
benchwrap/: __init__.py  cli.py
benchwrap/adapters/: __init__.py  evomem.py  gsm8k.py  locomo.py  memory_agent.py  memory_bench.py  mmlu.py  neural_memory.py  neural_memory_readonly.py
benchwrap/adapters/custom/: README.md
benchwrap/adapters/custom/memory/: README.md
benchwrap/core/: __init__.py  adapter.py  engine.py  model.py  reporter.py  scorer.py  types.py
tests/: README.md  conftest.py  run_tests.py  test_adapters.py  test_custom_adapter.py  test_engine.py  test_integration.py  test_scorers.py  test_types.py
