[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "benchwrap"
version = "0.1.0"
description = "Unified LLM benchmark wrapper — ONE adapter to rule them all. Zero cheating, full transparency."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.scripts]
benchwrap = "benchwrap.cli:main"

[project.optional-dependencies]
locomo = ["nltk"]
memory-agent = ["pyyaml"]
all = ["nltk", "pyyaml"]
